deleted target blank

--- a/about.html
+++ b/about.html
@@ -18,117 +18,114 @@
     <title>eljana/palodhi/portfolio</title>
   </head>
   <body>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="img.png" alt="" class="logo" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="index.html"
-                ></a>
-              </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+              ></a>
+            </li>
+          </ul>
 
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-      <p>
-        Welcome to my world of photography! I'm Eljana, and I'm more than just a
-        photographer; I'm a passionate visual storyteller with a vivid
-        imagination. With a blend of creativity and an unquenchable thirst for
-        innovation, I've spent years honing my craft, bringing moments to life
-        through the magic of photography.
-      </p>
-      <h3>MY Journey</h3>
-      <p>
-        My photographic journey began with a deep fascination for the world's
-        intricate details and an insatiable urge to immortalize them in pixels.
-        I've spent a significant portion of my career as a freelance
-        photographer, embracing the freedom to explore my creativity across
-        various genres of photography. From mesmerizing landscapes to intimate
-        portraits, I've had the privilege of capturing life's fleeting moments
-        through my lens.
-      </p>
+      </div>
+    </nav>
+    <p>
+      Welcome to my world of photography! I'm Eljana, and I'm more than just a
+      photographer; I'm a passionate visual storyteller with a vivid
+      imagination. With a blend of creativity and an unquenchable thirst for
+      innovation, I've spent years honing my craft, bringing moments to life
+      through the magic of photography.
+    </p>
+    <h3>MY Journey</h3>
+    <p>
+      My photographic journey began with a deep fascination for the world's
+      intricate details and an insatiable urge to immortalize them in pixels.
+      I've spent a significant portion of my career as a freelance photographer,
+      embracing the freedom to explore my creativity across various genres of
+      photography. From mesmerizing landscapes to intimate portraits, I've had
+      the privilege of capturing life's fleeting moments through my lens.
+    </p>
 
-      <h3>The Model Agency</h3>
+    <h3>The Model Agency</h3>
 
-      <p>
-        Experience In my pursuit of the perfect shot, I had the incredible
-        opportunity to work for two years at a renowned model agency. This
-        experience allowed me to delve into the world of fashion and editorial
-        photography, where I learned the art of transforming concepts into
-        captivating visual stories. It was here that I honed my skills in
-        working with models, lighting, and the finer nuances of the industry.
-      </p>
+    <p>
+      Experience In my pursuit of the perfect shot, I had the incredible
+      opportunity to work for two years at a renowned model agency. This
+      experience allowed me to delve into the world of fashion and editorial
+      photography, where I learned the art of transforming concepts into
+      captivating visual stories. It was here that I honed my skills in working
+      with models, lighting, and the finer nuances of the industry.
+    </p>
 
-      <h3>The Passion That Drives Me</h3>
-      <p>
-        Photography is not just a profession for me; it's a burning passion that
-        fuels my every endeavor. I believe that creativity knows no bounds, and
-        I constantly push the limits of my imagination to create stunning,
-        one-of-a-kind images. Whether it's experimenting with new techniques,
-        harnessing the power of post-processing, or simply chasing the perfect
-        moment, I'm always on a quest for that next breathtaking shot.
-      </p>
+    <h3>The Passion That Drives Me</h3>
+    <p>
+      Photography is not just a profession for me; it's a burning passion that
+      fuels my every endeavor. I believe that creativity knows no bounds, and I
+      constantly push the limits of my imagination to create stunning,
+      one-of-a-kind images. Whether it's experimenting with new techniques,
+      harnessing the power of post-processing, or simply chasing the perfect
+      moment, I'm always on a quest for that next breathtaking shot.
+    </p>
 
-      <h3>What Sets Me Apart</h3>
-      <p>
-        What sets me apart as a photographer is my ability to transform ordinary
-        scenes into extraordinary visual narratives. I have an innate knack for
-        seeing beauty in the seemingly mundane and translating it into
-        captivating imagery. My dedication to delivering exceptional results is
-        matched only by my enthusiasm for embracing new challenges and pushing
-        my creative boundaries.
-      </p>
-      <h3>Join Me on This Visual Journey</h3>
-      <p>
-        I invite you to join me on this visual journey as I continue to explore
-        the world through my lens. Whether you're looking for captivating
-        portraits, stunning landscapes, or innovative concepts brought to life,
-        I'm here to turn your ideas into captivating photographs. Feel free to
-        explore my portfolio, reach out for collaborations, or simply share your
-        thoughts and ideas. Let's embark on a creative adventure together, where
-        imagination knows no limits, and moments are forever immortalized in
-        pixels. Thank you for being a part of my photography story.
-      </p>
-      <footer class="page-footer font-small footer-dark pt-4">
-        <div class="container-fluid text-center text-md-left">
-          <div class="footer-copyright text-center py-3">
-            © 2023 Eljana Palodhi ALL rights reserved.
-          </div>
+    <h3>What Sets Me Apart</h3>
+    <p>
+      What sets me apart as a photographer is my ability to transform ordinary
+      scenes into extraordinary visual narratives. I have an innate knack for
+      seeing beauty in the seemingly mundane and translating it into captivating
+      imagery. My dedication to delivering exceptional results is matched only
+      by my enthusiasm for embracing new challenges and pushing my creative
+      boundaries.
+    </p>
+    <h3>Join Me on This Visual Journey</h3>
+    <p>
+      I invite you to join me on this visual journey as I continue to explore
+      the world through my lens. Whether you're looking for captivating
+      portraits, stunning landscapes, or innovative concepts brought to life,
+      I'm here to turn your ideas into captivating photographs. Feel free to
+      explore my portfolio, reach out for collaborations, or simply share your
+      thoughts and ideas. Let's embark on a creative adventure together, where
+      imagination knows no limits, and moments are forever immortalized in
+      pixels. Thank you for being a part of my photography story.
+    </p>
+    <footer class="page-footer font-small footer-dark pt-4">
+      <div class="container-fluid text-center text-md-left">
+        <div class="footer-copyright text-center py-3">
+          © 2023 Eljana Palodhi ALL rights reserved.
         </div>
-      </footer>
-    </body>
+      </div>
+    </footer>
   </body>
 </html>
