--- a/contact.html
+++ b/contact.html
@@ -18,82 +18,79 @@
     <title>eljana/palodhi/portfolio</title>
   </head>
   <body>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="img.png" alt="" class="logo" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="index.html"
-                ></a>
-              </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+              ></a>
+            </li>
+          </ul>
 
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html" target="_blank">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html" target="_blank">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/portfolio.html" target="_blank"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact.html" target="_blank"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-      <h1>GET IN TOUCH!</h1>
-      <ul class="contact-link list-unstyled">
-        <li>
-          ADDRESS
-          <br />
-          <a
-            href="https://www.google.com/maps/place/%CE%96%CF%85%CF%81%CE%AF%CF%87%CE%B7/@47.3775365,8.4665238,12z/data=!3m1!4b1!4m5!3m4!1s0x47900b9749bea219:0xe66e8df1e71fdc03!8m2!3d47.3768866!4d8.541694 "
-            >Zurich, Switzerland</a
-          >
-        </li>
-        <li>
-          EMAIL
-          <br />
-          <a href="mailto:elianapalodi3@gmail.com">elianapalodi3@gmail.com</a>
-        </li>
-        <li>
-          PHONE <br />
-          <a href="tel:0041779839507"> Click to call me</a>
-        </li>
-      </ul>
-      <footer class="page-footer font-small footer-dark pt-4">
-        <div class="container-fluid text-center text-md-left">
-          <div class="footer-copyright text-center py-3">
-            © 2023 Eljana Palodhi ALL rights reserved.
-          </div>
+      </div>
+    </nav>
+    <h1>GET IN TOUCH!</h1>
+    <ul class="contact-link list-unstyled">
+      <li>
+        ADDRESS
+        <br />
+        <a
+          href="https://www.google.com/maps/place/%CE%96%CF%85%CF%81%CE%AF%CF%87%CE%B7/@47.3775365,8.4665238,12z/data=!3m1!4b1!4m5!3m4!1s0x47900b9749bea219:0xe66e8df1e71fdc03!8m2!3d47.3768866!4d8.541694 "
+          target="_blank"
+          >Zurich, Switzerland</a
+        >
+      </li>
+      <li>
+        EMAIL
+        <br />
+        <a href="mailto:elianapalodi3@gmail.com" target="_blank"
+          >elianapalodi3@gmail.com</a
+        >
+      </li>
+      <li>
+        PHONE <br />
+        <a href="tel:0041779839507"> Click to call me</a>
+      </li>
+    </ul>
+    <footer class="page-footer font-small footer-dark pt-4">
+      <div class="container-fluid text-center text-md-left">
+        <div class="footer-copyright text-center py-3">
+          © 2023 Eljana Palodhi ALL rights reserved.
         </div>
-      </footer>
-    </body>
+      </div>
+    </footer>
   </body>
 </html>
