--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
@@ -16,9 +16,9 @@
     ></script>
     <link rel="stylesheet" href="/style.css" />
     <title>eljana/palodhi/portfolio</title>
-</head>
-<body>
-     <body>
+  </head>
+
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -43,22 +43,21 @@
                 aria-current="page"
                 href="index.html"
               ></a>
-              
             </li>
           </ul>
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html" >Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" target="_blank">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html" target="_blank">Portfolio</a>
+              <a class="nav-link" href="/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html" target="_blank">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -74,16 +73,15 @@
           <h3>I`m a freelance Photographer based in Zurich, Switzerland.</h3>
         </div>
       </section>
-      <a href="/contact.html" class="contact-button" target="_blank"> CONTACT ME </a>
-
-      <footer class="page-footer font-small footer-dark pt-4">
-        <div class="container-fluid text-center text-md-left">
-          <div class="footer-copyright text-center py-3">
-            © 2023 Eljana Palodhi ALL rights reserved.
-           
-          </div>
-        </div>
-      </footer>
+      <a href="/contact.html" class="contact-button"> CONTACT ME </a>
     </div>
-</body>
+
+    <footer class="page-footer font-small footer-dark pt-4">
+      <div class="container-fluid text-center text-md-left">
+        <div class="footer-copyright text-center py-3">
+          © 2023 Eljana Palodhi ALL rights reserved.
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
