--- a/port/fashion.html
+++ b/port/fashion.html
@@ -15,6 +15,42 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style.css" />
+    <style>
+      .row {
+        margin-top: 30px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 4px;
+      }
+      .column {
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+      }
+
+      .column img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+        transition: all 150ms ease-in-out;
+      }
+      .column img:hover {
+        transform: scale(1.3);
+      }
+
+      @media screen and (max-width: 800px) {
+        .column {
+          flex: 50%;
+          max-width: 50%;
+        }
+      }
+      @media screen and (max-width: 600px) {
+        .column {
+          flex: 100%;
+          max-width: 100%;
+        }
+      }
+    </style>
 
     <title>eljana/palodhi/portfolio</title>
   </head>
@@ -63,6 +99,31 @@
         </div>
       </div>
     </nav>
+
+    <div class="row">
+      <div class="column">
+        <img src="/img/-DSC0116.JPG" />
+        <img src="/img/-DSC0122.JPG" />
+        <img src="/img/-DSC0246.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/-DSC0268.JPG" />
+        <img src="/img/-DSC0461.JPG" />
+        <img src="/img/-DSC0465.JPG" />
+        <img src="/img/DSC-2294.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/-DSC0559.JPG" />
+        <img src="/img/IMG_6662.JPG" />
+        <img src="/img/IMG_6663.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/IMG_6664.JPG" />
+        <img src="/img/IMG_6665 (1).JPG" />
+        <img src="/img/IMG_6671.JPG" />
+        <img src="/img/IMG_6676.JPG" />
+      </div>
+    </div>
 
     <footer class="page-footer font-small footer-dark pt-4">
       <div class="container-fluid text-center text-md-left">
