--- a/port/portraits.html
+++ b/port/portraits.html
@@ -16,6 +16,42 @@
     ></script>
     <link rel="stylesheet" href="/style.css" />
     <title>eljana/palodhi/portfolio</title>
+    <style>
+      .row {
+        margin-top: 30px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 4px;
+      }
+      .column {
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+      }
+
+      .column img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+        transition: all 150ms ease-in-out;
+      }
+      .column img:hover {
+        transform: scale(1.3);
+      }
+
+      @media screen and (max-width: 800px) {
+        .column {
+          flex: 50%;
+          max-width: 50%;
+        }
+      }
+      @media screen and (max-width: 600px) {
+        .column {
+          flex: 100%;
+          max-width: 100%;
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -63,6 +99,30 @@
         </div>
       </div>
     </nav>
+    <div class="row">
+      <div class="column">
+        <img src="/img/img1.JPG" />
+
+        <img src="/img/img2.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/img4.JPG" />
+
+        <img src="/img/img5.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/img7.JPG" />
+
+        <img src="/img/img8.JPG" />
+      </div>
+      <div class="column">
+        <img src="/img/img9.JPG" />
+        <img src="/img/img6.JPG" />
+
+        <img src="/img/img3.JPG" />
+      </div>
+    </div>
+
     <footer class="page-footer font-small footer-dark pt-4">
       <div class="container-fluid text-center text-md-left">
         <div class="footer-copyright text-center py-3">
