--- a/port/fashion.html
+++ b/port/fashion.html
@@ -16,6 +16,9 @@
     ></script>
     <link rel="stylesheet" href="/style.css" />
     <style>
+      body {
+        background-color: black;
+      }
       .row {
         margin-top: 30px;
         display: flex;
@@ -105,23 +108,29 @@
         <img src="/img/-DSC0116.JPG" />
         <img src="/img/-DSC0122.JPG" />
         <img src="/img/-DSC0246.JPG" />
+        <img src="/img/image00002.jpeg" alt="" />
+        <img src="/img/image00007.jpeg" alt="" />
       </div>
       <div class="column">
         <img src="/img/-DSC0268.JPG" />
         <img src="/img/-DSC0461.JPG" />
         <img src="/img/-DSC0465.JPG" />
         <img src="/img/DSC-2294.JPG" />
+        <img src="/img/image00008.jpeg" alt="" />
       </div>
       <div class="column">
         <img src="/img/-DSC0559.JPG" />
         <img src="/img/IMG_6662.JPG" />
         <img src="/img/IMG_6663.JPG" />
+        <img src="/img/image00010.jpeg" alt="" />
+        <img src="/img/image00006.jpeg" alt="" />
       </div>
       <div class="column">
         <img src="/img/IMG_6664.JPG" />
         <img src="/img/IMG_6665 (1).JPG" />
         <img src="/img/IMG_6671.JPG" />
         <img src="/img/IMG_6676.JPG" />
+        <img src="/img/image00009.jpeg" alt="" />
       </div>
     </div>
 
