--- a/port/portraits.html
+++ b/port/portraits.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="/style.css" />
     <title>eljana/palodhi/portfolio</title>
     <style>
+      body {
+        background-color: black;
+      }
       .row {
         margin-top: 30px;
         display: flex;
@@ -84,7 +87,7 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -102,24 +105,27 @@
     <div class="row">
       <div class="column">
         <img src="/img/img1.JPG" />
-
         <img src="/img/img2.JPG" />
+        <img src="/img/image00001.jpeg" alt="" />
+        <img src="/img/image00005.jpeg" alt="" />
       </div>
       <div class="column">
         <img src="/img/img4.JPG" />
-
         <img src="/img/img5.JPG" />
+        <img src="/img/img3.JPG" alt="" />
+        <img src="/img/image00011.jpeg" alt="" />
       </div>
       <div class="column">
         <img src="/img/img7.JPG" />
-
         <img src="/img/img8.JPG" />
+        <img src="/img/image00004.jpeg" alt="" />
+        <img src="/img/IMG_0672.JPG" alt="" />
       </div>
       <div class="column">
         <img src="/img/img9.JPG" />
         <img src="/img/img6.JPG" />
-
-        <img src="/img/img3.JPG" />
+        <img src="/img/image00003.jpeg" />
+        <img src="/img/IMG_6679.JPG" alt="" />
       </div>
     </div>
 
