--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
       }
 
       .photo-grid-container {
-        column-count: 2;
-        column-width: 500px;
-        margin-top: 200px;
+        column-count: 4;
+        column-width: 300px;
+        margin-top: 300px;
       }
       .photo-grid-item {
         margin: 0 auto 15px;
@@ -84,7 +84,10 @@
         <div>
           <a target="_blank" href="/port/portraits.html"
             >portraits
-            <img src="img/cover.JPG" class="portfolioimage img-fluid" alt=""
+            <img
+              src="img/coverportrait.jpg"
+              class="portfolioimage img-fluid"
+              alt=""
           /></a>
         </div>
       </div>
@@ -92,7 +95,27 @@
         <div>
           <a target="_blank" href="/port/fashion.html"
             >fashion<img
-              src="img/cover2.JPG"
+              src="img/coverfash.jpg"
+              class="portfolioimage img-fluid"
+              alt=""
+          /></a>
+        </div>
+      </div>
+      <div class="photo-grid-item">
+        <div>
+          <a target="_blank" href="/port/street.html"
+            >Street Photography<img
+              src="street.img/13.JPG"
+              class="portfolioimage img-fluid"
+              alt=""
+          /></a>
+        </div>
+      </div>
+      <div class="photo-grid-item">
+        <div>
+          <a target="_blank" href="/port/comercial.html"
+            >Commercial<img
+              src="img/sauvage.jpg"
               class="portfolioimage img-fluid"
               alt=""
           /></a>
