--- a/port/comercial.html
+++ b/port/comercial.html
@@ -27,9 +27,9 @@
         padding: 0 4px;
       }
       .column {
-        flex: 25%;
-        max-width: 25%;
-        padding: 0 4px;
+        float: left;
+        width: 33.33%;
+        padding: 5px;
       }
 
       .column img {
@@ -107,25 +107,35 @@
     <div class="row">
       <div class="column">
         <img src="/img/comm.img/1.jpg" />
+      </div>
+      <div class="column">
         <img src="/img/comm.img/2.jpg" />
+      </div>
+      <div class="column">
         <img src="/img/comm.img/3.jpg" />
       </div>
+    </div>
 
+    <div class="row">
       <div class="column">
         <img src="/img/comm.img/4.jpg" />
+      </div>
+      <div class="column">
         <img src="/img/comm.img/5.jpg" />
+      </div>
+      <div class="column">
         <img src="/img/comm.img/6.jpg" />
       </div>
-
+    </div>
+    <div class="row">
       <div class="column">
         <img src="/img/comm.img/7.jpg" />
-        <img src="/img/comm.img/8.jpg" />
+      </div>
+      <div class="column">
         <img src="/img/comm.img/9.jpg" />
       </div>
-
       <div class="column">
         <img src="/img/comm.img/10.jpg" />
-        <img src="/img/comm.img/11.jpg" />
       </div>
     </div>
 
