--- a/port/portraits.html
+++ b/port/portraits.html
@@ -126,6 +126,7 @@
         <img src="/img/img6.JPG" />
         <img src="/img/image00003.jpeg" />
         <img src="/img/IMG_6679.JPG" alt="" />
+        <img src="/img/_DSC0238.JPG" />
       </div>
     </div>
 
