--- a/port/street.html
+++ b/port/street.html
@@ -27,9 +27,9 @@
         padding: 0 4px;
       }
       .column {
-        flex: 25%;
-        max-width: 25%;
-        padding: 0 4px;
+        float: left;
+        width: 33.33%;
+        padding: 5px;
       }
 
       .column img {
